2002-04-04  Danny Smith  <dannysmith@sourceforge.users.net>

	* include/math.h (DOMAIN, SING, OVERFLOW, UNDERFLOW,
	TLOSS, PLOSS): Move oldname defines back, following
	the underscored names.
	(_controlfp, _control87, _clearfp, _statusfp, _fpreset,
	_fpecode): Remove prototypes copied from float.h.
	(nan, nanf): Move into block protected against RC_INVOKED
	and __cplusplus.
	* include/stdlib.h (_Exit): Change from static inline to
	extern inline.
	* mingwex/_Exit.c : New file.
	* mingwex/Makefile.in: Add _Exit.o to libmingwex.a.

2002-04-04  Danny Smith  <dannysmith@sourceforge.users.net>

	Add libgmon.a and libmingwex.a for cygwin -mno-cygwin.
	* configure.in (SUBDIRS): Add  profile and mingwex to cygwin target.
	(configdirs): Likewise.
	(LIBGMON_A): Define for cygwin target as well.
	* configure: Regenerate.
	* profile/configure.in (THREAD_DLL): Remove define.
	(LIBM_A): Remove define.
	(LIBGMON_A): Define for cygwin target as well.
	* profile/configure: Regenerate.
	* profile/makefile.in (install): Install to inst_libdir and
	inst_includedir.

	* mingwex/makefile.in (CFLAGS): Move -fomit-frame-pointer to...
	(OPTFLAGS): New define.
	(ALL_CFLAGS): Add $(OPTFLAGS).
	(ALL_CXXFLAGS): Same.
	(.c.o:): Remove ALL_CXXFLAGS. 

2002-03-29  Danny Smith  <dannysmith@sourceforge.users.net>

	* include/stdint.h: Add missing newline at eof. 
	* include/stdio.h (_snwprintf): Correct spelling.
	(_vsnwprintf): Likewise.
	(snprintf): Add prototype.
	(vsnprintf): Add prototype and inline definition.
	(snwprintf): Add prototype.
	(vsnwprintf): Add prototype and inline definition.
	* include/wchar.h (_snwprintf): Correct spelling.
	(_vsnwprintf): Likewise.
	(snwprintf): Add prototype.
	(vsnwprintf): Add prototype and inline definition.
	* mingwex/Makefile.in: Add snprintf.o, snwprintf.o
	to libmingwex.a.
	* mingwex/snprintf.c: New file.
	* mingwex/snwprintf.c: New file.

2002-03-26  Danny Smith  <dannysmith@sourceforge.users.net>
